# self_improve_machine

./: ._start.sh  .gitignore  CONSTITUTION.md  README.md  SOUL.md  deploy_to_aliyun.py  index.html  pyproject.toml  start.sh
.codebuddy/plans/: agent-self-funding-profit-loop_30ea812e.md  cash-first-7day-pivot-cn_cdd0bd27(未完成).md  china-market-profit-pivot_e5a10663(未完成).md  self_improve_machine_255fa5a4(未完成).md  (+3 more)
_agent_generated/: ai_bug_fixer.py  ai_code_generator.py  ai_code_optimizer.py  ai_code_reviewer.py  ai_script_generator.py  api_demo_script.py  api_integration_example.py  api_integration_example_summarize.py  api_introduction.md  api_test_tool.py  api_translation_example.py  app_generator.py  auto_bug_fixer.py  auto_code_reviewer.py  blog_post.md  blog_post_ai_code_review.md  bug_fixer_cli.py  chat_api_example.py  chat_cli_tool.py  code_generator_cli.py  code_quality_analyzer.py  code_review_cli.py  code_review_tool.py  code_reviewer_cli.py  demo_code_review.py  demo_code_review_tool.py  demo_code_review_tool_post.md  developer_toolkit.py  devto_post_ai_api.md  doc_generator.py  document_summarizer_cli.py  pro_bug_fixer.py  pro_code_generator.py  pro_code_reviewer.py  pro_code_reviewer_example.py  professional_code_reviewer.py  smart_code_review_tool.py  smart_code_reviewer.py  summarize_script.py
cli/: __init__.py  creator_cli.py
config/: default.toml
scripts/: README.md
tests/: __init__.py  conftest.py  test_api_profit_gating.py  test_basic.py  test_economy.py  test_memory.py  test_profit_gate.py  test_self_mod.py  test_survival.py  test_tools.py
(+90 files in other folders)
