[tool.poetry]
name = "self-improve-machine"
version = "0.1.0"
description = "Self-Improving, Self-Replicating Silicon-Based Life AI Agent"
authors = ["SIM Agent <sim@silicon.life>"]
readme = "README.md"
packages = [
    { include = "agent_core", from = "src" },
    { include = "cli" },
]

[tool.poetry.scripts]
sim = "agent_core.main:main"
sim-cli = "cli.creator_cli:cli"
sim-watchdog = "agent_core.self_mod.watchdog:main"

[tool.poetry.dependencies]
python = "^3.11"
# LLM
openai = "^1.0"
anthropic = "^0.30"
# Payment
alipay-sdk-python = "^3.7"
# Cloud Infrastructure
alibabacloud-ecs20140526 = "^3.0"
alibabacloud-tea-openapi = "^0.3"
paramiko = "^3.4"
# Data
aiosqlite = "^0.20"
chromadb = "^0.5"
# Web
fastapi = "^0.111"
uvicorn = {version = "^0.30", extras = ["standard"]}
aiohttp = "^3.9"
# Config
pydantic = "^2.0"
pydantic-settings = "^2.0"
tomli = "^2.0"
# Version Control
gitpython = "^3.1"
# Logging
structlog = "^24.0"
# CLI
click = "^8.1"
# Scheduling
apscheduler = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
